[gd_scene load_steps=7 format=4 uid="uid://jtdmoji4acxv"]

[ext_resource type="Script" uid="uid://blxs7vqwi3uln" path="res://Prefab/GUI/LevelEditor/MyLevelItem/LevelEditorMyLevelItem.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://biewbfqqa138j" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorMapShowBox.png" id="2"]
[ext_resource type="Texture2D" uid="uid://oo2odgowu0t7" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorMapShowBoxPress.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dwwg5awviq8g2" path="res://Asset/Texture/TowerDefense/Background/TowerDefenseMap/Frontlawn/Frontlawn.jpg" id="4"]
[ext_resource type="Texture2D" uid="uid://d0smlukjcx1r6" path="res://Asset/Texture/GUI/DailyChallenge/DailyChallengeCloseButton.png" id="5"]
[ext_resource type="Texture2D" uid="uid://5lvxpd7jaoc4" path="res://Asset/Texture/GUI/DailyChallenge/DailyChallengeCloseButtonPress.png" id="6"]

[node name="LevelEditorMyLevelItem" type="Control"]
custom_minimum_size = Vector2(167.625, 164.625)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1")

[node name="SelectButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.10216
anchor_top = -0.291572
anchor_right = 3.10216
anchor_bottom = -0.291572
offset_left = -520.0
offset_top = 48.0
offset_right = -73.0
offset_bottom = 487.0
scale = Vector2(0.375, 0.375)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("3")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="SelectButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.719
anchor_top = 0.453
anchor_right = 0.719
anchor_bottom = 0.453
offset_left = -273.393
offset_top = 137.133
offset_right = 70.607
offset_bottom = 209.133
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "地图预览"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapMask" type="ColorRect" parent="SelectButton"]
show_behind_parent = true
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -399.0
offset_top = 48.0
offset_right = -47.0
offset_bottom = 314.0
mouse_filter = 2

[node name="MapTexture" type="TextureRect" parent="SelectButton/MapMask"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_right = 2424.0
offset_bottom = 934.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.225, 0.225)
mouse_filter = 2
texture = ExtResource("4")
expand_mode = 1

[node name="DeleteButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 144.0
offset_right = 171.0
offset_bottom = 24.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("6")
texture_hover = ExtResource("6")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="SelectButton" to="." method="SelectButtonPressed"]
[connection signal="pressed" from="DeleteButton" to="." method="DeleteButtonPressed"]
